Fixed alignment issues with search icon on 404 and degree search inputs

--- a/src/scss/page/_degree-search.scss
+++ b/src/scss/page/_degree-search.scss
@@ -309,6 +309,7 @@
       bottom: 0;
       box-sizing: border-box;
       height: 50px;
+      line-height: 50px;
       overflow: hidden;
       position: absolute;
       right: 16px;
